google verify inntent

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_ENV=production
 MONGODB_URI=mongodb://dondeayudar:aquiyahora1@ds259577.mlab.com:59577/heroku_1snjw0dh
+GOOGLEclientID: 874528403710-tvtrsn768q82tlkl1ho7briedlqn0kj7.apps.googleusercontent.com,
+GOOGLEclientSecret: dvNyAL1pBvYNDuhYCruIs1Jy
