--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "axios": "^0.18.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
