--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^6.3.5",
     "react": "^16.6.3",
     "react-dates": "^20.2.5",
     "react-dom": "^16.6.3",
