--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "multer": "^1.4.2",
     "react-svg": "^10.0.16"
   }
 }
